creation footer  page error et responsive navbar

--- a/kasa/src/style/index.scss
+++ b/kasa/src/style/index.scss
@@ -2,3 +2,5 @@
 @import './mixins.scss';
 @import './settings.scss';
 @import './components/Navbar.scss';
+@import './components/Footer.scss';
+@import './pages/error';
