--- a/kasa/src/style/components/Navbar.scss
+++ b/kasa/src/style/components/Navbar.scss
@@ -7,6 +7,12 @@ header {
       display: flex;
       padding: 0;
       margin-top: 30px;
+      @media (max-width: 768px) {
+        margin-top: 15px;
+      }
+      @media (max-width: 350px) {
+        font-size: 13px;
+      }
       li,
       a {
         color: $color-1;
@@ -15,8 +21,24 @@ header {
 
         &:last-child {
           margin-left: 20px;
+          @media (max-width: 400px) {
+            margin-left: 10px;
+          }
         }
       }
+    }
+  }
+  img {
+    cursor: pointer;
+    width: 145px;
+    height: 47px;
+    @media (min-width: 768px) {
+      width: auto;
+      height: auto;
+    }
+    @media (max-width: 350px) {
+      width: 100px;
+      height: 38px;
     }
   }
 }
