--- a/kasa/src/style/variables.scss
+++ b/kasa/src/style/variables.scss
@@ -1,5 +1,7 @@
 // Variables couleurs
 $color-1: #ff6060;
+$color-2: #000000;
+$color-3: #ffffff;
 
 //Variables fonts
 $font-1: 'Montserrat', sans-serif;
