creation page home accueil et responsive

--- a/kasa/src/style/components/Footer.scss
+++ b/kasa/src/style/components/Footer.scss
@@ -6,7 +6,7 @@ footer {
   color: $color-3;
   align-items: center;
   justify-content: center;
-
+  min-width: 335px;
   span {
     padding-top: 30px;
   }
