--- a/kasa/src/style/index.scss
+++ b/kasa/src/style/index.scss
@@ -1,6 +1,9 @@
 @import './variables.scss';
 @import './mixins.scss';
 @import './settings.scss';
+@import './pages/home';
 @import './components/Navbar.scss';
 @import './components/Footer.scss';
+@import './components/Banner.scss';
+@import './components/Card.scss';
 @import './pages/error';
