--- a/kasa/src/style/components/Navbar.scss
+++ b/kasa/src/style/components/Navbar.scss
@@ -1,17 +1,27 @@
 header {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 16px;
+  margin-bottom: 40px;
+  min-width: 335px;
+  @media screen and (max-width: 420px) {
+    margin-bottom: 16px;
+  }
   nav {
     ul {
       display: flex;
       padding: 0;
       margin-top: 30px;
-      @media (max-width: 768px) {
-        margin-top: 15px;
+      @media screen and (max-width: 768px) {
+        margin-top: 20px;
       }
-      @media (max-width: 350px) {
+      @media screen and (max-width: 420px) {
+        text-transform: uppercase;
+        font-size: 12px;
+      }
+
+      @media screen and (max-width: 360px) {
         font-size: 13px;
+        margin-top: 15px;
       }
       li,
       a {
@@ -21,7 +31,7 @@ header {
 
         &:last-child {
           margin-left: 20px;
-          @media (max-width: 400px) {
+          @media screen and (max-width: 400px) {
             margin-left: 10px;
           }
         }
@@ -32,11 +42,11 @@ header {
     cursor: pointer;
     width: 145px;
     height: 47px;
-    @media (min-width: 768px) {
+    @media screen and (min-width: 769px) {
       width: auto;
       height: auto;
     }
-    @media (max-width: 350px) {
+    @media screen and (max-width: 360px) {
       width: 100px;
       height: 38px;
     }
