--- a/kasa/src/style/components/Footer.scss
+++ b/kasa/src/style/components/Footer.scss
@@ -2,8 +2,8 @@ footer {
   height: 209px;
   display: flex;
   flex-direction: column;
-  background-color: $color-2;
-  color: $color-3;
+  background-color: #000000;
+  color: #ffffff;
   align-items: center;
   justify-content: center;
   min-width: 335px;
