--- a/kasa/src/style/components/Navbar.scss
+++ b/kasa/src/style/components/Navbar.scss
@@ -25,8 +25,7 @@ header {
       }
       li,
       a {
-        color: $color-1;
-        text-decoration: none;
+        color: #ff6060;
         list-style: none;
 
         &:last-child {
