--- a/kasa/src/style/index.scss
+++ b/kasa/src/style/index.scss
@@ -3,6 +3,6 @@
 @import './pages/home';
 @import './components/Navbar.scss';
 @import './components/Footer.scss';
-@import './components/Banner.scss';
+@import './components/HomeBanner.scss';
 @import './components/Card.scss';
 @import './pages/error';
