--- a/kasa/src/style/pages/_error.scss
+++ b/kasa/src/style/pages/_error.scss
@@ -1,5 +1,5 @@
 .error {
-  color: $color-1;
+  color: #ff6060;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -37,6 +37,6 @@
   text-align: center;
   padding-top: 130px;
   a {
-    color: $color-1;
+    color: #ff6060;
   }
 }
