--- a/kasa/src/style/components/HomeBanner.scss
+++ b/kasa/src/style/components/HomeBanner.scss
@@ -1,7 +1,4 @@
-//Variables Background-colors
-$background-color: rgba(0, 0, 0, 0.3);
-
-.banner-container {
+.home-banner-container {
   display: flex;
   width: auto;
   height: 220px;
@@ -10,65 +7,46 @@ $background-color: rgba(0, 0, 0, 0.3);
   align-items: center;
   justify-content: center;
   border-radius: 25px;
-  background: $background-color url(../../images/forest.png);
-  background-blend-mode: darken;
-  background-repeat: no-repeat;
+  background: rgba(0, 0, 0, 0.3) url(../../images/forest.png);
   background-size: cover;
+  background-repeat: no-repeat;
+  background-blend-mode: darken;
 }
 
-.banner-text {
+.home-banner-text {
   display: flex;
   width: 100%;
   height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
   align-items: center;
   justify-content: center;
   font-size: 48px;
   font-weight: 500;
-  font-style: normal;
   line-height: 143%;
   color: #ffffff;
-  background: $background-color;
   border-radius: 25px;
-
-  &-container {
-    display: flex;
-  }
-}
-
-@media screen and (max-width: 992px) {
-  .banner-container {
-    width: auto;
-  }
+  background: rgba(0, 0, 0, 0.3);
 }
 
 @media screen and (max-width: 786px) {
-  .banner-container {
+  .home-banner-container {
     width: auto;
     height: 120px;
     margin: 0 6.5%;
-    border-radius: 10px 10px 10px 10px;
+    border-radius: 10px;
     @media screen and (max-width: 420px) {
-      background: $background-color url(../../images/forestMobile.png);
+      background: rgba(0, 0, 0, 0.3) url(../../images/forestMobile.png);
       width: 335px;
       margin: auto;
       height: 111px;
     }
   }
-  .banner-text {
-    top: 0;
-    left: 10;
-    right: 0;
-    align-items: center;
-    justify-content: center;
+  .home-banner-text {
     font-size: 38px;
     font-weight: 500;
     line-height: 143%;
     color: #ffffff;
-    background: $background-color;
+
+    background: rgba(0, 0, 0, 0.3);
     border-radius: 10px;
 
     @media screen and (max-width: 420px) {
