--- a/kasa/src/style/pages/_home.scss
+++ b/kasa/src/style/pages/_home.scss
@@ -9,7 +9,8 @@
   flex-wrap: wrap;
   margin: 43px auto;
   @media screen and (max-width: 420px) {
-    background-color: #ffffff;
+    //background-color: #ffffff;
+    background-color: $color-3;
     margin-top: 0;
     gap: 20px;
     padding: 20px;
