Creation components AboutBanner

--- a/kasa/src/style/index.scss
+++ b/kasa/src/style/index.scss
@@ -5,4 +5,5 @@
 @import './components/Footer.scss';
 @import './components/HomeBanner.scss';
 @import './components/Card.scss';
+@import './components/AboutBanner.scss';
 @import './pages/error';
