Creation component collapse et page about

--- a/kasa/src/style/index.scss
+++ b/kasa/src/style/index.scss
@@ -5,5 +5,7 @@
 @import './components/Footer.scss';
 @import './components/HomeBanner.scss';
 @import './components/Card.scss';
+@import './pages/about';
 @import './components/AboutBanner.scss';
+@import './components/Collapse.scss';
 @import './pages/error';
