creation titres, component Tag

--- a/kasa/src/style/index.scss
+++ b/kasa/src/style/index.scss
@@ -8,4 +8,7 @@
 @import './pages/about';
 @import './components/AboutBanner.scss';
 @import './components/Collapse.scss';
+@import './pages/lodging.scss';
+@import './components/Carrousel.scss';
+@import './components/Tag.scss';
 @import './pages/error';
