creation titres, component Host

--- a/kasa/src/style/index.scss
+++ b/kasa/src/style/index.scss
@@ -11,4 +11,5 @@
 @import './pages/lodging.scss';
 @import './components/Carrousel.scss';
 @import './components/Tag.scss';
+@import './components/Host.scss';
 @import './pages/error';
