creatiion component Rating

--- a/kasa/src/style/index.scss
+++ b/kasa/src/style/index.scss
@@ -12,4 +12,5 @@
 @import './components/Carrousel.scss';
 @import './components/Tag.scss';
 @import './components/Host.scss';
+@import './components/Rating.scss';
 @import './pages/error';
