responsive de la page Lodgingg

--- a/kasa/src/style/components/Tag.scss
+++ b/kasa/src/style/components/Tag.scss
@@ -20,4 +20,7 @@
   @media screen and (max-width: 585px) {
     font-size: 12px;
   }
+  @media screen and (max-width: 420px) {
+    border-radius: 5px;
+  }
 }
