--- a/kasa/src/style/pages/_lodging.scss
+++ b/kasa/src/style/pages/_lodging.scss
@@ -21,3 +21,39 @@
     }
   }
 }
+
+.title-tags-container {
+  display: flex;
+  flex-direction: column;
+}
+.tags-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.titleTags-hostRating {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  padding-bottom: 15px;
+
+  @media screen and (max-width: 585px) {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 585px) {
+  .host-rating-container {
+    width: 100%;
+    justify-content: space-between;
+    padding-top: 5px;
+    display: flex;
+    flex-direction: row-reverse;
+  }
+}
+
+.lodging-container {
+  @media screen and (max-width: 280px) {
+    padding: 0 20px;
+    min-width: 335px;
+  }
+}
