correction HomeBanner et rajout commentaires

--- a/kasa/src/style/components/Carrousel.scss
+++ b/kasa/src/style/components/Carrousel.scss
@@ -34,7 +34,7 @@
   }
 }
 
-.leftArrow {
+.ArrowLeft {
   z-index: 5;
   position: absolute;
   top: 41%;
@@ -49,7 +49,7 @@
   }
 }
 
-.rightArrow {
+.ArrowRight {
   z-index: 5;
   top: 41%;
   right: 2%;
