--- a/kasa/src/style/components/Navbar.scss
+++ b/kasa/src/style/components/Navbar.scss
@@ -8,11 +8,13 @@ header {
   }
   nav {
     ul {
+      font-size: 24px;
       display: flex;
       padding: 0;
       margin-top: 30px;
       @media screen and (max-width: 768px) {
         margin-top: 20px;
+        font-size: 16px;
       }
       @media screen and (max-width: 420px) {
         text-transform: uppercase;
