--- a/kasa/src/style/pages/_error.scss
+++ b/kasa/src/style/pages/_error.scss
@@ -3,17 +3,20 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  @media screen and (max-width: 280px) {
+    width: 335px;
+  }
   .error-titles {
     display: flex;
     flex-direction: column;
     align-items: center;
 
     img {
-      @media (max-width: 768px) {
+      @media screen and (max-width: 768px) {
         width: 350px;
         height: auto;
       }
-      @media (max-width: 400px) {
+      @media screen and (max-width: 400px) {
         width: 200px;
         height: auto;
       }
@@ -24,6 +27,7 @@
       margin: 0;
       font-weight: 500;
       margin-top: 50px;
+      text-align: center;
       @media (max-width: 768px) {
         font-size: 25px;
       }
